k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant-bot
  labels:
    name: restaurant-bot
    environment: production
